# ui-models

./: .gitignore  CMakeLists.txt  UniversalModels.qbs
include/: AdaptingTableModel.h  AdaptingTableModelPrivate.h  InterfaceAwareTreeData.h  ItemController.h  TreeFilteringCache.cpp  TreeFilteringCache.h  TreeItem.h  TreeItemInterface.h  TreeModel.h  custom_icon_delegate.h  hash_tuple.h  l_tree_controller_global.h  treeitemfunctions.h  treeviewfunctions.h  treeviewtemplatefunctions.h
src/: AdaptingTableModel.cpp  AdaptingTableModelPrivate.cpp  TreeModel.cpp  custom_icon_delegate.cpp  genericeventfilter.cpp  treeviewfunctions.cpp  treeviewtemplatefunctions.cpp
src/version/: version.cpp
